# geo-optimizer-skill

./: .dockerignore  .geo-optimizer.example.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SCORING_RUBRIC.md  SKILL.md  geo  install.sh  pyproject.toml  requirements.txt  update.sh
.github/actions/geo-audit/: action.yml
.github/workflows/: ci.yml  docker.yml  geo-audit-example.yml  publish.yml
ai-context/: chatgpt-custom-gpt.md  claude-project.md  cursor.mdc  kiro-steering.md  windsurf.md
docs/: ai-bots-reference.md  ai-context.md  geo-audit.md  geo-methods.md  getting-started.md  index.md  llms-txt.md  schema-injector.md  troubleshooting.md
references/: ai-bots-list.md
scripts/: generate_llms_txt.py  geo_audit.py  http_utils.py  schema_injector.py  schema_validator.py
src/geo_optimizer/: __init__.py
src/geo_optimizer/cli/: audit_cmd.py  formatters.py  github_formatter.py  html_formatter.py  llms_cmd.py  main.py  rich_formatter.py  schema_cmd.py
src/geo_optimizer/core/: audit.py  llms_generator.py  registry.py  schema_injector.py  schema_validator.py
src/geo_optimizer/i18n/: __init__.py
src/geo_optimizer/i18n/locales/en/LC_MESSAGES/: geo_optimizer.mo  geo_optimizer.po
src/geo_optimizer/i18n/locales/it/LC_MESSAGES/: geo_optimizer.mo  geo_optimizer.po
src/geo_optimizer/models/: config.py  project_config.py  results.py
src/geo_optimizer/utils/: cache.py  http.py  http_async.py  robots_parser.py  validators.py
src/geo_optimizer/web/: __init__.py  app.py  badge.py  cli.py
tests/: __init__.py  test_audit.py  test_cli.py  test_core.py  test_generate_llms_txt.py  test_http_utils.py  test_integration.py  test_p0_security_fixes.py  test_schema_injector.py  test_schema_validator.py  test_security_critical.py  test_security_m1.py  test_v21_coverage.py  test_v2_remaining_fixes.py
