[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-optimizer"
version = "2.0.0b1"  # PEP 440: era "2.0.0-beta", normalizzato
description = "Generative Engine Optimization toolkit — make websites visible to AI search engines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Juan Camilo Auriti", email = "juancamilo.auriti@gmail.com"},
]
keywords = ["geo", "seo", "ai", "llm", "optimization", "schema", "llms-txt", "generative-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0,<9.0",
    "requests>=2.28.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-cov>=4.0,<8.0",
    "flake8>=6.0,<8.0",
]

[project.urls]
Homepage = "https://github.com/auriti-labs/geo-optimizer-skill"
Documentation = "https://auritidesign.it/docs"
Repository = "https://github.com/auriti-labs/geo-optimizer-skill"
Issues = "https://github.com/auriti-labs/geo-optimizer-skill/issues"

[project.scripts]
geo = "geo_optimizer.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]

[tool.flake8]
max-line-length = 120
select = ["E9", "F63", "F7", "F82"]
